# redplanet_archive-240910

./: .gitignore  Makefile  README.md  pyproject.toml
.trash/: 230624_pyproject.toml  230626_pyproject.toml  downloader.py
datasets/: README.md
datasets/step1_generate-local/crust/topo/Mars_DEM_200m_MOLA-HRSC.zarr/: Makefile  README.md
datasets/step1_generate-local/crust/topo/Mars_DEM_200m_MOLA-HRSC.zarr/code/: main.py  requirements.txt
datasets/step2_upload-cloud/: gen_registry_from_box.py
datasets/step2_upload-cloud/.notes/: boxapi_development_v1.ipynb  boxapi_development_v3.ipynb  env-explicit_box1.yaml  env-explicit_box2.yaml  env-explicit_box3.yaml  env_box1.yaml  env_box2.yaml  env_box3.yaml  env_box4.yaml  rclone_link_testing.txt
datasets/step2_upload-cloud/output/: redplanet_registry_2024-06-24_17-01.csv
datasets/step2_upload-cloud/output/.old/: redplanet_registry_2024-06-23_03-20.json
docs/: changelog.md  installation.md  references.md  references.txt  thanks.txt
docs/.development/envs/: 240307-1_dev1_env.txt  240308-1_dev2_env.txt  240408-1_dev2_env-explicit.txt
docs/.development/personal/Craters/: craters_2.ipynb
docs/.development/personal/Crust/: 1.5_Crust_rewritten_240312.py  2_crust_rewrite_v1.1.ipynb  5_crust_dem_test_v1.ipynb
docs/.development/personal/GRS/: grs_accessor_rewrite_v2.ipynb  grs_test_yay.ipynb
docs/.development/personal/mag/: geo527-1proj.ipynb
docs/.development/public/: hash_local.py  hash_web.py
docs/.development/public/Crust/: generate_DEM-200m_zarr-zipstore.ipynb  generate_DEM-463m_zarr-zipstore.ipynb  generate_WeiczorekTopo5759_zarr-zipstore.ipynb  generate_WeiczorekTopo5759_zarr-zipstore.tmp
docs/.development/public/Crust/.depracated/: chunk_datasets.ipynb  generate_moho-registry.tmp
docs/.development/public/Mag/: maven_reducer_2_sza.py
docs/.misc/: empress.md  research_advice.txt
docs/.readme_assets/readme_supp/: installation.md  thanks.txt
docs/advice/: python_tips.md
docs/development/envs/: 240308-1_dev2_env-explicit.txt  240401-1_dev2_env.txt  240408-1_dev2_env.txt  _README.txt
docs/development/personal/Craters/: craters_1.ipynb
docs/development/personal/Crust/: 3_crust_rewrite_v1.2.ipynb  4_crust_test_yay.ipynb  5.5_Crust_rewritten_24039.py  6.1_crust_rewrite-dem_v2.1.ipynb  6.2_crust_rewrite-dem_v2.2.ipynb
docs/development/personal/GRS/: GRS_rewritten_240310.py  generate_GRS_data.ipynb  grs_accessor_rewrite_v1.ipynb
docs/development/personal/heat/: 230725.ipynb  heat.ipynb
docs/development/personal/mag/: geo527-2proj.ipynb
docs/development/public/Crust/: generate_DEM-200m_zarr-zipstore.ipynb
docs/development/public/Mag/: maven_reducer_1_altitude.py
docs/misc/: empress.md  how_to_build.txt
docs/notebooks/generate_data/: README.md
docs/notebooks/generate_data/GRS/: generate_GRS_data.ipynb
docs/notebooks/scrap/: README.md
docs/notebooks/scrap/Crust/: generate_crustalthickness_data.ipynb
docs/notebooks/scrap/GRS/: generate_GRS_data.ipynb
docs/readme_assets/readme_supp/: changelog.md  installation.md
docs/redplanet_logo_flux-schnell/: _README.txt
docs/redplanet_logo_flux-schnell/outputs/: _script1.sh  _script2.sh
src/redplanet/: DataManager.py  __init__.py  utils.py
src/redplanet/Craters/: Craters.py  __init__.py
src/redplanet/Crust/: Crust.py  __init__.py
src/redplanet/GRS/: GRS.py  __init__.py
src/redplanet/GRS/data/: al_concentration.npy  al_sigma.npy  ca_concentration.npy  ca_sigma.npy  cl_concentration.npy  cl_sigma.npy  fe_concentration.npy  fe_sigma.npy  h2o_concentration.npy  h2o_sigma.npy  k_concentration.npy  k_sigma.npy  s_concentration.npy  s_sigma.npy  si_concentration.npy  si_sigma.npy  th_concentration.npy  th_sigma.npy
src/redplanet/Heat/: Heat.py  __init__.py
src/redplanet/Mag/: Mag.py  __init__.py
tests/: tests.md
